--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,9 @@ main:
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  
+  #- title: "Teaching"
+  #  url: /teaching/    
     
   - title: "Blog"
     url: /year-archive/
