--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links links
 main:
-  - title: "Publicaciones"
+  - title: "Publications"
     url: /publications/
 
-  - title: "Congresos"
+  - title: "Conferences"
     url: /talks/    
 
   
